--- a/style.css
+++ b/style.css
@@ -151,6 +151,8 @@ body {
 	align-items: center;
 	padding-top: 10px;
 	color: azure;
+	padding-top: 30px;
+	padding-bottom: 30px;
 }
 .about-text {
 	display: flex;
@@ -216,12 +218,18 @@ p.btn:hover {
 	box-shadow: 0 10px 25px skyblue;
 	border-radius: 40px;
 }
-.about .img {
+.about img {
 	padding-right: 50px;
 }
 
 .products {
-	background: url(elec/layered-waves-haikei.svg);
+	background: rgb(8, 27, 41);
+	background: linear-gradient(
+		180deg,
+		rgba(8, 27, 41, 1) 0%,
+		rgba(60, 166, 165, 1) 40%,
+		rgba(255, 255, 255, 1) 90%
+	);
 	background-size: cover;
 	padding: 20px;
 	/* height: 300px; */
@@ -230,8 +238,8 @@ p.btn:hover {
 
 .products h1 {
 	padding: 30px;
-	padding-top: 35px;
-	color: aquamarine;
+	/* color: aquamarine; */
+	color: aliceblue;
 	font-size: 50px;
 	text-align: center;
 	text-decoration: underline;
@@ -305,8 +313,15 @@ p.btn:hover {
 .back {
 	transform: rotatey(-180deg);
 }
+.items div .card + p {
+	text-align: center;
+	text-transform: uppercase;
+	margin-top: 10px;
+	font-size: 18px;
+	font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
 summary {
-	color: rgb(2, 2, 90);
+	color: #081b29;
 	font-size: 20px;
 	font-weight: 600;
 	font-family: "EB Garamond", serif;
@@ -314,6 +329,7 @@ summary {
 	padding: 10px;
 	text-decoration: underline;
 	text-transform: uppercase;
+	cursor: pointer;
 }
 /*
 .products svg {
@@ -322,26 +338,57 @@ summary {
 	z-index: -1;
 } */
 
-footer {
-	width: 100%;
-	background-color: #347e88;
+.director {
+	padding: 40px;
+	/* padding-bottom: 50px; */
+	background: linear-gradient(
+		rgba(255, 255, 255, 1) 25%,
+		rgba(60, 166, 165, 1) 90%,
+		rgba(8, 27, 41, 1) 100%
+	);
 }
-footer p {
-	vertical-align: middle;
+.director h1 {
+	color: #081b29;
+	font-size: 40px;
 	text-align: center;
-	color: #fff;
-	padding: 8px;
-	font-size: 15px;
+	text-decoration: underline;
+	font-family: "EB Garamond", serif;
+	padding: 20px;
+}
+.director q {
+	font-weight: 600;
+	color: #190952;
+	font-size: 20px;
+	padding: 10px;
+	margin: 5px;
+	display: block;
+	text-align: center;
+	font-style: italic;
+	font-family: "Times New Roman", Times, serif;
+}
+.director p {
+	font-size: 18px;
+	padding: 20px;
+	font-style: italic;
+	font-weight: 400;
+	color: #2d4356;
+	/* backdrop-filter: blur(5px); */
+}
+.director .name {
+	font-weight: 500;
+	color: whitesmoke;
+	text-align: center;
 }
 
 .contact {
-	padding: 30px 0;
+	padding: 50px 0;
 	background-color: #081b29;
 	display: flex;
-	/* align-items: center; */
+	align-items: center;
 	justify-content: space-evenly;
 	color: #fff;
 	font-size: 20px;
+	flex-wrap: wrap;
 }
 .contact a {
 	text-decoration: none;
@@ -360,6 +407,17 @@ footer p {
 	margin: 30px 0px;
 }
 
+footer {
+	width: 100%;
+	background-color: #347e88;
+}
+footer p {
+	vertical-align: middle;
+	text-align: center;
+	color: #fff;
+	padding: 8px;
+	font-size: 15px;
+}
 /* SHVM FORM */
 .container {
 	flex: 0 1 700px;
@@ -440,12 +498,14 @@ footer p {
 
 .screen-body-item {
 	flex: 1;
-	padding: 50px;
+	padding: 30px;
 }
 
 .screen-body-item.left {
 	display: flex;
 	flex-direction: column;
+	padding: 50px;
+	/* flex-shrink: 2; */
 }
 
 .app-title {
@@ -526,7 +586,7 @@ select.app-form-control {
 	border-bottom: 1px solid #666;
 }
 
-.credits {
+/* .credits {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -535,18 +595,18 @@ select.app-form-control {
 	font-family: "Roboto Condensed", sans-serif;
 	font-size: 16px;
 	font-weight: normal;
-}
+} */
 
-.credits-link {
+/* .credits-link {
 	display: flex;
 	align-items: center;
 	color: #fff;
 	font-weight: bold;
 	text-decoration: none;
-}
+} */
 
-.dribbble {
+/* .dribbble {
 	width: 20px;
 	height: 20px;
 	margin: 0 5px;
-}
+} */
